# SmartDownloadManager

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  clippy.toml  deny.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.test.tsx  App.tsx  api.ts  main.tsx  store.test.ts  store.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs  state.rs
apps/desktop/src/components/: AddDownloadDialog.test.tsx  AddDownloadDialog.tsx  QueueList.test.tsx  QueueList.tsx  SettingsPanel.tsx  SpeedGraph.tsx
configs/: biome.json  tsconfig.base.json
crates/api/: Cargo.toml
crates/api-types/: Cargo.toml
crates/api-types/src/: lib.rs
crates/api/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: chunking.rs  dash.rs  download.rs  duplicate.rs  error.rs  ftp.rs  hls.rs  job.rs  lib.rs  media.rs  metalink.rs  mirrors.rs  naming.rs  progress.rs  recovery.rs  resume.rs  retry.rs  segment.rs  ssh.rs  torrent.rs  verify.rs  vpn.rs  webdav.rs
crates/engine/tests/: download_flow.rs  sprint10_flow.rs  sprint12_auth_flow.rs  sprint4_flow.rs  sprint9_flow.rs
crates/engine/tests/fixtures/: fake_ytdlp.py
crates/media/: Cargo.toml
crates/media/src/: error.rs  ffmpeg.rs  lib.rs  metadata.rs  ytdlp.rs
crates/media/tests/: ytdlp_ffmpeg_flow.rs
crates/media/tests/fixtures/: sample.srt  sample_audio_only.m4a
crates/media/tests/support/: tiny_http.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: dash.rs  dns.rs  error.rs  ftp.rs  hls.rs  http.rs  lib.rs  metalink.rs  net_config.rs  scp.rs  sftp.rs  ssh.rs  webdav.rs
crates/protocols/tests/: ftp_integration.rs  sftp_integration.rs  socks5_proxy_integration.rs  webdav_integration.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  lib.rs  main.rs  runner.rs  state.rs  util.rs
crates/server/src/routes/: auth.rs  capture.rs  jobs.rs  media.rs  mod.rs  pairing.rs  search.rs  ws.rs
crates/server/tests/: capture_and_jobs.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql  0002_sprint4.sql  0003_sprint7.sql  0004_sprint9.sql  0005_sprint10.sql  0006_sprint11.sql  0007_sprint12_search.sql  0008_sprint12_proxy_and_credentials.sql  0009_sprint12_auth.sql
crates/storage/src/: auth.rs  credentials.rs  lib.rs
crates/torrent/: Cargo.toml
crates/torrent/src/: lib.rs  magnet.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: ARCHITECTURE.md  FEATURES.md  LICENSING.md  PRD.md  ROADMAP.md  RUNNING_AND_TESTING.md  SPRINT_PLAN.md  SPRINT_PLAN_PHASE2.md  TECH_DECISIONS.md
extensions/chrome/: README.md  package.json  vite.config.ts
extensions/chrome/public/: manifest.json  offscreen.html
extensions/chrome/src/: offscreen.ts  options.ts  popup.ts
extensions/firefox/: README.md  package.json  tsconfig.json  vite.config.ts
extensions/firefox/public/: manifest.json  options.html  popup.html
extensions/firefox/src/: background.ts
extensions/shared/: package.json
extensions/shared/src/: api-client.test.ts  api-client.ts  api-types.ts  background-core.ts  browser-api.ts  chrome-storage-adapter.ts  index.ts  offscreen-core.ts  options-core.ts  popup-core.ts  settings.test.ts  settings.ts  url-utils.test.ts  url-utils.ts
scripts/: README.md
