[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/protocols",
    "crates/torrent",
    "crates/media",
    "crates/storage",
    "crates/scheduler",
    "crates/api-types",
    "crates/server",
    "crates/cli",
    "crates/xtask",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Enochrwa/SmartDownloadManager"
authors = ["Enock Rwabukamba"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
indicatif = "0.17"
rand = "0.8"
wiremock = "0.6"
tempfile = "3"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1"
hex = "0.4"
# Locked in docs/TECH_DECISIONS.md — wired up starting crates/torrent (Phase 2, Sprint 7)
# and crates/protocols' HLS/DASH modules (Phase 2, Sprint 9).
librqbit = "7"
m3u8-rs = "6"
dash-mpd-rs = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
