[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/protocols",
    "crates/torrent",
    "crates/media",
    "crates/storage",
    "crates/scheduler",
    "crates/api-types",
    "crates/server",
    "crates/cli",
    "crates/xtask",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Enochrwa/SmartDownloadManager"
authors = ["Enock Rwabukamba"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "socks"], default-features = false }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
indicatif = "0.17"
rand = "0.8"
wiremock = "0.6"
tempfile = "3"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1"
hex = "0.4"
# Locked in docs/TECH_DECISIONS.md — wired up starting crates/torrent (Phase 2, Sprint 7)
# and crates/protocols' HLS/DASH modules (Phase 2, Sprint 9).
librqbit = "8"
m3u8-rs = "6"
# The upstream repo is github.com/emarsden/dash-mpd-rs, but the crate is
# published on crates.io under the name "dash-mpd" (TECH_DECISIONS.md §5's
# "dash-mpd-rs" refers to the repo name). `default-features = false` drops
# the crate's own `fetch` feature (reqwest/tokio/ffmpeg/mp4box subprocess
# plumbing) since Sprint 9 only needs manifest parsing — segment fetching
# goes through our own HTTP downloader, same as every other manifest-based
# protocol here.
dash-mpd = { version = "0.17", default-features = false }
url = "2"
# Sprint 7: FTP/FTPS carryover (docs/SPRINT_PLAN_PHASE2.md "Phase 1 carryover").
# tokio-rustls-ring pulls suppaftp's own tokio_rustls/rustls re-exports so our
# FTPS connector stays on the exact same rustls build as the rest of suppaftp.
suppaftp = { version = "10", default-features = false, features = ["tokio", "tokio-rustls-ring"] }
webpki-roots = "0.26"
percent-encoding = "2"
data-encoding = "2"
# Sprint 8: SFTP/SCP (russh, Apache-2.0, per docs/LICENSING.md) + WebDAV
# (reuses the reqwest/rustls stack already pulled in for HTTP — WebDAV is
# just HTTP with PROPFIND/PUT verbs, docs/SPRINT_PLAN_PHASE2.md Sprint 8).
# "ring" feature to stay on the same rustls crypto backend as
# `tokio-rustls-ring`/webpki-roots above, rather than pulling in aws-lc-rs
# as a second crypto stack.
russh = { version = "0.62", features = ["ring"] }
russh-sftp = "2"
base64 = "0.22"
# Sprint 12: `sdm search --regex` (FTS5 handles the plain-text/token
# search path; regex mode can't be pushed into FTS5's tokenizer, so it's
# applied in-process against the already-filtered candidate rows).
regex = "1"
# Sprint 12: DNS over HTTPS resolver, with plain-DNS fallback.
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls"] }
# Sprint 12: encrypted credential storage via OS-native keychains
# (Windows Credential Manager / macOS Keychain / Linux Secret Service).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# Sprint 12: proxy auth / OAuth2 refresh token, cookie, and API-key
# encryption-at-rest fallback for platforms with no OS keychain (e.g. a
# headless Linux NAS install with no Secret Service daemon running) —
# `docs/TECH_DECISIONS.md` §13 already commits to SQLite everywhere else,
# so the fallback is an AES-256-GCM-encrypted blob in the same DB rather
# than a second storage engine, with the key itself still kept in the
# keychain where one is available.
aes-gcm = "0.10"
# Sprint 12: OAuth2 authorization-code flow with local-loopback redirect.
oauth2 = "4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
