[package]
name = "sdm-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sdm-protocols = { path = "../protocols" }
sdm-storage = { path = "../storage" }

[lib]
name = "sdm_engine"
path = "src/lib.rs"
