[package]
name = "sdm-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
rand.workspace = true
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
crc32fast.workspace = true
hex.workspace = true
sdm-protocols = { path = "../protocols" }
sdm-storage = { path = "../storage" }

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true

[lib]
name = "sdm_engine"
path = "src/lib.rs"
