[package]
name = "sdm-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-util.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true

[lib]
name = "sdm_protocols"
path = "src/lib.rs"
