[package]
name = "sdm-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-util.workspace = true
# Sprint 7: FTP/FTPS carryover.
suppaftp.workspace = true
webpki-roots.workspace = true
percent-encoding.workspace = true
# Sprint 8: SFTP/SCP (russh) + WebDAV (PROPFIND/PUT over the existing
# reqwest stack, no new HTTP dependency needed).
russh.workspace = true
russh-sftp.workspace = true
base64.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
rand = "0.10"

[lib]
name = "sdm_protocols"
path = "src/lib.rs"
