[package]
name = "sdm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "sdmd — the SmartDownloadManager daemon. Owns the engine, exposes REST + WebSocket."

[[bin]]
name = "sdmd"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rand.workspace = true
chrono.workspace = true
hex.workspace = true
futures-util.workspace = true
sdm-engine = { path = "../engine" }
sdm-storage = { path = "../storage" }
sdm-api-types = { path = "../api-types" }
sdm-media = { path = "../media" }

[dev-dependencies]
tempfile.workspace = true
http-body-util = "0.1"
wiremock.workspace = true

[lib]
name = "sdm_server"
path = "src/lib.rs"
