[package]
name = "sdm-torrent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
librqbit.workspace = true
data-encoding.workspace = true
percent-encoding.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
name = "sdm_torrent"
path = "src/lib.rs"
