[package]
name = "sdm-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
rand.workspace = true
hex.workspace = true
chrono.workspace = true
dirs = "5"
sdm-engine = { path = "../../../crates/engine" }
sdm-storage = { path = "../../../crates/storage" }
sdm-server = { path = "../../../crates/server" }
sdm-api-types = { path = "../../../crates/api-types" }
axum.workspace = true
socket2 = "0.5"

[lib]
name = "sdm_desktop_lib"
path = "src/lib.rs"
